@@ -4,6 +4,11 @@ Release 0.2.0 - unreleased
 
   NEW FEATURES
 
+    TAJO-273: NotEval incurs NPE with boolean column. (hyunsik)
+
+    TAJO-267: Implement equals() and deepEquals() functions at LogicalNode. 
+    (jihoon)
+
     TAJO-260: Add between predicate. (hyunsik)
 
     TAJO-208: Implement char_length(string) function. (hyunsik)
@@ -212,6 +217,8 @@ Release 0.2.0 - unreleased
     TAJO-2: remove all @author tags and update license header. (hyunsik)
 
   BUG FIXES
+
+    TAJO-273: NotEval incurs NPE with boolean column. (hyunsik)
 
     TAJO-272: boolean test does not work correctly. (hyunsik)
 
